Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95577

Incorrect punycode encoding and decoding for non-BMP codepoints

XMLWordPrintable

    • 9bd2ab85ac88e88f29a11a7dedc8635261ca3484 (qt/qtbase/dev) 0da1e0171218af8430e9e96e7f919f3b3c459869 (qt/qtbase/6.2)
    • Qt6_Foundation_Sprint 39

      While working on IDNA 2008 implementation I discovered that the current punycode implementation does not correctly encode or decode non-BMP Unicode codepoints. For example U+102F7 COPTIC EPACT NUMBER FIVE HUNDRED is encoded to xn--ib9bk1k instead of correct xn--r97c, that is in turn decoded as incorrect U+02F7 MODIFIER LETTER LOW TILDE. This breaks IDNA (including version 2003) handling for domains with non-BMP characters.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ievgenii.meshcheriakov Ievgenii Meshcheriakov
            ievgenii.meshcheriakov Ievgenii Meshcheriakov
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes